# cursorwise

./: .env.example  .gitignore  API_TOOL_AUDIT_REPORT.md  FLOWISE_BUILDER_ORCHESTRATOR_CHATFLOW_MCP.md  README.md  pyproject.toml
cursorwise/: __init__.py  __main__.py  client.py  config.py  server.py
